--- a/mobile.css
+++ b/mobile.css
@@ -1,7 +1,10 @@
+*{
+    box-sizing: border-box;
+}
 .wrapper{
     display: grid;
     grid-template-columns: 15% 1fr 15%;
-    grid-template-rows: 20% 5% auto 80px;
+    grid-template-rows: 120px 5% auto 80px;
     grid-template-areas: 
         "header header header"
         "button empty join-btn"
