--- a/mobile.css
+++ b/mobile.css
@@ -1,5 +1,6 @@
 *{
     box-sizing: border-box;
+    margin: 0;
 }
 .wrapper{
     display: grid;
@@ -14,23 +15,45 @@
 
 .logo{
     grid-area: header;
+    text-align: center;
 }
 
-.dropdown{
-    grid-area: button;
-}
-
-#join-btn{
+.join-btn{
     grid-area: join-btn;
+    text-decoration: none;
+    background-color: rgb(41, 68, 42);
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
 }
 
 .main-text{
     grid-area: main;
 }
 
-#footer{
+h2{
+    text-align: center;
+    padding: 6%;
+}
+
+.basic-text{
+    padding: 0% 5%;
+}
+
+h3{
+    text-align: center;
+    padding: 3%;
+}
+
+h4{
+    padding: 2%;
+}
+
+.footer{
     grid-area: footer;
 }
+
 /* dropdown menu */
 
 .button{
@@ -42,6 +65,7 @@
 }
 
 .dropdown {
+    grid-area: button;
     position: relative;
     display: inline-block;
 }
@@ -49,18 +73,25 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: grey;
     width: 100%;
     min-width: 160px;
     z-index: 1;
-  }
+}
 
 .dropdown-content li {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-  }
+}
 
-  .dropdown:hover .dropdown-content {
-      display: block;}
+.dropdown-content li a{
+    color: #000000;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
