--- a/mobile.css
+++ b/mobile.css
@@ -5,7 +5,7 @@
 .wrapper{
     display: grid;
     grid-template-columns: 15% 1fr 15%;
-    grid-template-rows: 120px 5% auto 80px;
+    grid-template-rows: 20vh 7vh auto 80px;
     grid-template-areas: 
         "header header header"
         "button empty join-btn"
@@ -73,20 +73,32 @@ h4{
 .dropdown-content {
     display: none;
     position: absolute;
+    padding: 0;
     background-color: grey;
-    width: 100%;
+    width: 70vw;
     min-width: 160px;
     z-index: 1;
 }
 
 .dropdown-content li {
     color: black;
-    padding: 12px 16px;
+    padding: 20px 50px;
     text-decoration: none;
     display: block;
+    border-bottom: 1px solid black;
+}
+
+.dropdown-content li:last-child{
+    border-bottom: none;
+}
+
+.active-link{
+    background-color: rgb(68, 68, 85);
 }
 
 .dropdown-content li a{
+    display: block;
+    font-size: 18px;
     color: #000000;
     text-decoration: none;
     font-weight: bold;
