--- a/mobile.css
+++ b/mobile.css
@@ -2,15 +2,26 @@
     box-sizing: border-box;
     margin: 0;
 }
+
+/*colors*/
+
+:root{
+    --bg-color: azure;
+    --text-box-color: grey;
+    --button-color: rgb(41, 68, 42);
+    --footer-color: rgb(202, 199, 199);
+}
+
 .wrapper{
     display: grid;
-    grid-template-columns: 15% 1fr 15%;
-    grid-template-rows: 20vh 7vh auto 80px;
+    grid-template-columns: 20% 1fr 20%;
+    grid-template-rows: 20vh 5vh auto 80px;
     grid-template-areas: 
         "header header header"
         "button empty join-btn"
         "main main main"
         "footer footer footer";
+    background-color: var(--bg-color);
 }
 
 .logo{
@@ -20,10 +31,11 @@
 
 .join-btn{
     grid-area: join-btn;
+    height: 100%;
+    width: 100%;
     text-decoration: none;
-    background-color: rgb(41, 68, 42);
+    background-color: var(--button-color);
     color: white;
-    padding: 16px;
     font-size: 16px;
     border: none;
 }
@@ -41,25 +53,48 @@ h2{
     padding: 0% 5%;
 }
 
+.calendar ul{
+    background-color: var(--text-box-color);
+    margin: 0 1%;
+    padding: 2% 15%;
+}
+
 h3{
     text-align: center;
     padding: 3%;
 }
 
 h4{
+    padding: 2% 5%;
+}
+
+.times{
+    background-color: var(--text-box-color);
+    margin: 10%;
     padding: 2%;
+}
+
+.times h4{
+    text-align: center;
+}
+
+.times p{
+    text-align: center;
 }
 
 .footer{
     grid-area: footer;
+    text-align: center;
+    background-color: var(--footer-color);
 }
 
 /* dropdown menu */
 
 .button{
-    background-color: rgb(41, 68, 42);
+    width: 100%;
+    height: 100%;
+    background-color: var(--button-color);
     color: white;
-    padding: 16px;
     font-size: 16px;
     border: none;
 }
