--- a/mobile.css
+++ b/mobile.css
@@ -6,10 +6,11 @@
 /*colors*/
 
 :root{
-    --bg-color: azure;
-    --text-box-color: grey;
-    --button-color: rgb(41, 68, 42);
-    --footer-color: rgb(202, 199, 199);
+    --bg-color: #fff;
+    --text-box-color: #fff;
+    --button-color: #626e60;
+    --footer-color: #3c3c3c;
+    --text-box-color2: #945d60;
 }
 
 .wrapper{
@@ -24,6 +25,10 @@
     background-color: var(--bg-color);
 }
 
+.main-img{
+    width: 100%;
+}
+
 .logo{
     grid-area: header;
     text-align: center;
@@ -33,9 +38,10 @@
     grid-area: join-btn;
     height: 100%;
     width: 100%;
+    text-align: center;
     text-decoration: none;
     background-color: var(--button-color);
-    color: white;
+    color: #000;
     font-size: 16px;
     border: none;
 }
@@ -69,9 +75,10 @@ h4{
 }
 
 .times{
-    background-color: var(--text-box-color);
+    background-color: var(--text-box-color2);
     margin: 10%;
     padding: 2%;
+    border-radius: 1%;
 }
 
 .times h4{
@@ -94,7 +101,7 @@ h4{
     width: 100%;
     height: 100%;
     background-color: var(--button-color);
-    color: white;
+    color: #000;
     font-size: 16px;
     border: none;
 }
@@ -128,7 +135,7 @@ h4{
 }
 
 .active-link{
-    background-color: rgb(68, 68, 85);
+    background-color: #945d60;
 }
 
 .dropdown-content li a{
