--- a/mobile.css
+++ b/mobile.css
@@ -132,8 +132,7 @@ h2{
 }
 
 .basic-text{
-    padding: 0% 5%;
-    padding-bottom: 2%;
+    padding: 2% 5%;
     font-family: 'Roboto Slab', serif;
 }
 
@@ -147,6 +146,26 @@ h3{
 h4{
     padding: 2% 5%;
 }
+
+h5{
+    font-size: 16px;
+}
+
+/* info-list */
+
+.info-list ul{
+    list-style: none;
+    padding-left: 7%;
+}
+
+.info-list h5{
+    padding: 1% 0;
+}
+
+.x{
+    margin: 30%;
+}
+
 /* calendar */
 
 .calendar h4{
