--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ body{
 }
 
 .main-img{
-    grid-area: main-img;
     width: 100%;
 }
 
@@ -111,28 +110,63 @@ body{
     color: #000;
 }
 
-/* */
+/* layout */
 
 .main-text{
     grid-area: main;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto auto auto auto;
+    grid-template-rows: auto auto auto auto auto auto;
     grid-template-areas: 
         "text text"
         "main-img main-img"
+        "block-left block-right"
         "header2 header2"
         "main-left main-right"
         "main-left empty";
 }
 
-.textblock{
+.textblock, #lo-kamppa-img{
     grid-area: text;
 }
 
-.textblock2{
+.textblock2, #lo-osastot{
     grid-area: header2;
 }
+
+.main-img{
+    grid-area: main-img;
+}
+
+.main-text h3{
+    grid-area: header2;
+}
+
+#lo-calendar{
+    grid-area: main-left;
+}
+
+#lo-times{
+    grid-area: main-right;
+}
+
+.join-info{
+    grid-area: header2;
+}
+
+#jn{
+    grid-area: block-left;
+}
+
+#tmh{
+    grid-area:  block-right;
+}
+
+#lo-adr{
+    grid-area: empty;
+}
+
+/* */
 
 h2{
     text-align: center;
@@ -158,10 +192,6 @@ h5{
     font-size: 16px;
 }
 
-.main-text h3{
-    grid-area: header2;
-}
-
 /* info-list */
 
 .info-list{
@@ -180,7 +210,6 @@ h5{
 /* calendar */
 
 .calendar{
-    grid-area: main-left;
     width: 90%;
     margin: 0 auto;
 }
@@ -205,7 +234,6 @@ h5{
 /* text block */
 
 .times{
-    grid-area: main-right;
     background-color: var(--text-box-color2);
     border: #000 1px solid;
     margin: 2%;
@@ -222,10 +250,6 @@ h5{
 
 .times p{
     text-align: center;
-}
-
-.join-info{
-    grid-area: header2;
 }
 
 /* footer */
